<resources>
    <string name="app_name">AndroidTemplateMVVM</string>

    <string name="home">首页</string>
    <string name="product">产品</string>
    <string name="reservation">预约</string>

    <string name="discover">发现</string>
    <string name="follow">关注</string>
    <string name="community">社区</string>
    <string name="my">我的</string>

    <string name="recommend">推荐</string>

    <string name="register">注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="other_login">第三方免注册登录</string>
    <string name="agree_">我已阅读并同意《用户协议》和《隐私政策》</string>


    <string name="ok">好的</string>
    <string name="tips">提示</string>
    <string name="warning">警告</string>
    <string name="logout_tips">确认退出登录吗？</string>
    <string name="confirm">确定</string>

    <string name="basic_info">基本</string>
    <string name="additional_info">其它</string>

    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="birth_date">出生日期</string>
    <string name="age">年龄</string>
    <string name="id_number">身份证号</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="address">家庭住址</string>
    <string name="department_name">部门名称</string>
    <string name="position_name">职位名称</string>
    <string name="job_number">工号</string>
    <string name="working_status">工作状态</string>
    <string name="salary">薪资</string>
    <string name="hire_date">入职日期</string>
    <string name="leave_date">离职日期</string>
    <string name="work_location">工作地点</string>
    <string name="weekly_hours">每周工作时间</string>
    <string name="annual_leave_day">年假</string>
    <string name="health_status">健康状态</string>


    <string name="name_placeholder">请输入姓名</string>
    <string name="age_placeholder">请输入年龄</string>
    <string name="birth_date_placeholder">请选择出生日期</string>
    <string name="id_number_placeholder">请输入身份证号</string>
    <string name="phone_number_placeholder">请输入手机号</string>
    <string name="email_placeholder">请输入邮箱</string>
    <string name="address_placeholder">请输入家庭住址</string>
    <string name="department_name_placeholder">请输入部门名称</string>
    <string name="position_name_placeholder">请输入职位名称</string>
    <string name="job_number_placeholder">请输入工号</string>
    <string name="working_status_placeholder">请选择工作状态</string>
    <string name="salary_placeholder">请输入薪资</string>

    <string name="id_number_error">请输入正确的身份证号</string>
    <string name="email_error">请输入正确的邮箱</string>

    <string name="add_staff">添加员工</string>
    <string name="save">保存</string>
    <string name="settings">设置</string>
    <string name="bill">账单</string>
    <string name="favorite">收藏</string>
    <string name="meme">表情包</string>
    <string name="card_pack">卡包</string>
    <string name="add_status">+ 状态</string>
    <string name="years_old">岁</string>
    <string name="save_successfully">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="unknown">未知</string>

    <string name="please_select_gender">请选择性别</string>
    <string name="please_select_working_status">请选择工作状态</string>
    <string name="yuan">元</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
</resources>