<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_bottom_navigation"
    app:startDestination="@+id/navigation_my">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.template.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.template.ui.staff.StaffListFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_staff_list" />
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.template.ui.calendar.CalendarFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.template.ui.my.MyFragment"
        android:label="@string/my"
        tools:layout="@layout/fragment_my" />

</navigation>