<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlSymmetry">

    <data>
        <variable
            name="vm"
            type="com.example.template.ui.staff.vm.StaffFormState" />
        <variable
            name="click"
            type="com.example.template.ui.staff.StaffBasicFormFragment.ClickProxy" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_medium" >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_4"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/name"
                    app:placeholderText="@string/name_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="10">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@={vm.staff.name}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>


        <!--        <com.google.android.material.divider.MaterialDivider-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="@dimen/value_4"/>-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/value_4"
                        android:text="@string/gender" />
                    <RadioGroup
                        android:checkedButton="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        radioItems="@{vm.genderOptionList}"
                        android:onCheckedChanged="@{click.genderCheckListener}"/>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/age"
                    app:placeholderText="@string/age_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="3">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{vm.staff.age ?? ""}'
                        android:maxLength="3"
                        android:inputType="number"
                        android:afterTextChanged="@{click.ageChangeListener}"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/id_number"
                    app:placeholderText="@string/id_number_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="18"
                    editTextErrorMessage="@{vm.idNumberError}">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.staff.idNumber}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLines="1"
                        android:maxLength="18"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/phone_number"
                    app:placeholderText="@string/phone_number_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="20">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.staff.phoneNumber}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLength="11"
                        android:inputType="textPhonetic"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_4"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/email"
                    app:placeholderText="@string/email_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    editTextErrorMessage="@{vm.emailError}">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@={vm.staff.email}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLines="1"
                        android:maxLength="100"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_4"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/address"
                    app:placeholderText="@string/address_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="100">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@={vm.staff.address}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLines="1"
                        android:maxLength="100"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_4"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/department_name"
                    app:placeholderText="@string/department_name_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="100">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@={vm.staff.departmentName}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLines="1"
                        android:maxLength="100"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_4"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/position_name"
                    app:placeholderText="@string/position_name_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="100">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@={vm.staff.positionName}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLines="1"
                        android:maxLength="100"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_4"
                    android:layout_gravity="center_horizontal"
                    android:hint="ddda"
                    app:placeholderText="@string/name_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="10">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@={vm.staff.name}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/value_4"
                    android:layout_gravity="center_horizontal"
                    android:hint="fffe"
                    app:placeholderText="@string/name_placeholder"
                    app:counterEnabled="true"
                    app:counterMaxLength="10">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@={vm.staff.name}"
                        android:textSize="@dimen/text_size_14"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>