<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlSymmetry">

    <data>
        <variable
            name="vm"
            type="com.example.template.ui.login.LoginActivity.LoginState" />
        <variable
            name="click"
            type="com.example.template.ui.login.LoginActivity.ClickProxy" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_medium">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.xuexiang.xui.widget.edittext.ClearEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.username}"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@={vm.password}"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    tools:layout_editor_absoluteX="16dp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_gravity="center"
                    android:onClick="@{()->click.login()}"
                    android:text="Login"
                    app:layout_constraintTop_toBottomOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large">
                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />
                <Space
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp" />
                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/other_login"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />
        </LinearLayout>

    </LinearLayout>
</layout>